# butterpy

./: .gitattributes  .gitignore  LICENSE  Pipfile  Project.toml  README  README.md  config.py  constants.py  cov.sh  generate.py  pyproject.toml  regions.py  requirements.txt  setup.py  simulate_lightcurves.py  simulate_lightcurves_batch.py  spots.py
bench/: Project.toml  bench.jl  bench.py  benchmark_data.csv  compare_times.py  generate.jl  julia_times.csv  newbench.py  plot.jl  python_times.csv
butterpy/: __init__.py  config.py  constants.py  core.py  core_original.py  deprecated.py  distributions.py  flutter.py  generate.py  regions.py  simulate_lightcurves.py  spots.py  tests.py  version.py
butterpy/deprecated/: regions.py
butterpy/io/: __init__.py  fits.py  hlsp.py  pkl.py
butterpy/photometry/: __init__.py  core.py
butterpy/utils/: activelat.py  animation.py  blackbody.py  diffrot.py  joyslaw.py  normalization.py  (+3 more)
deprecated/: constants.py  spots.py
diagnostics/: diagnostic_plots.ipynb  diagnostics.csv  run_diagnostic_models.py
docs/: butterpy.rst  conf.py  index.rst
misc/: config.py  simulate_lightcurves_batch.py
notebooks/: compare_versions.ipynb  cycle_testing.ipynb  solar_normalization.ipynb  surface_fig.ipynb
scripts/: check_regions.py  check_regions.txt  check_spots.py  test_flutter.py
src/: Butterfly.jl  plots.jl  regions.jl  simulate.jl  spots.jl
tests/: butterpy_test.py  plots.py  runtests.jl  test_distributions.py  test_temperatures.py
visualization/: animate_regions_rate.py  animate_regions_tau.py  visualize_active_latitudes.py
(+5 files in other folders)
