[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "butterpy"
version = "0.1"
description = ""
authors = ["Zachary Claytor and Miles Lucas"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
scipy = "^1.3"
matplotlib = "^3.1"
pandas = "^0.25.3"
tqdm = "^4.37"
astropy = "^3.2"
